<resources>
    <string name="app_name">Cryptogram</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Cryptogram</string>
    <string name="button_snap_photo">Take a photo</string>
    <string name="button_select_photo">Select a photo</string>
    <string name="button_upload_photo">Encrypt and Share</string>
    <string name="preview_content_description">A preview of the image to be uploaded</string>
    <string name="password_hint">password</string>
    <string name="password_prompt">Enter a password for your image</string>
    <string name="main_menu_settings_button">Settings</string>
    <string name="max_image_width_key">max_image_width_key</string>
    <string name="max_image_height_key">max_image_height_key</string>
    <string name="folder_path_key">cryptogram.EXPORT_FOLDER_PATH</string>
    <string name="max_image_width_explanation">The maximum width of the image encoded into a Cryptogram image. Affects performance.</string>
    <string name="max_image_height_explanation">The maximum height of the image encoded into a Cryptogram image. Affects performance.</string>
    <string name="image_folder_explanation">Select a folder to put encrypted Cryptogram images into</string>
    <string name="max_image_width">Maximum Image Width</string>
    <string name="max_image_height">Maximum Image Height</string>
    <string name="file_creation_failed">Failed to create file!</string>
    <string name="no_camera_app">There is no camera application available!!</string>
    <string name="file_location_failed">Could not find image file!</string>
    <string name="thumbnail_desc">Thumbnail of selected image</string>
    <string name="album_name_hint">Album Name</string>

</resources>