<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference android:inputType="number" android:key="@string/max_image_width_key" android:dialogTitle="Maximum image width" android:title="@string/max_image_width" android:summary="@string/max_image_width_explanation"/>
    <EditTextPreference android:inputType="number" android:dialogTitle="Maximum image height" android:key="@string/max_image_height_key" android:title="@string/max_image_height" android:summary="@string/max_image_height_explanation"/>
    <EditTextPreference android:onClick="onClickFolderSelectionButton" android:dialogTitle="Encrypt Photo Output Folder" android:key="@string/folder_path_key" android:defaultValue="/sdcard/Cryptogram" android:title="Image Output Folder" android:summary="@string/image_folder_explanation"/>
    

</PreferenceScreen>