<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_snap_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_snap_photo" />

    <Button
        android:id="@+id/button_select_photo"
        android:onClick="selectPhoto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_select_photo" />

    <Button
        android:id="@+id/button_upload_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_upload_photo" />

</LinearLayout>
